# websubmit-rs

./: .gitignore  100_answers.py  Cargo.toml  Makefile  README.md  client_side_time_to_add_user.txt  create_users.py  page.html  resubscribe.py  run.sh  run.txt  rust-toolchain  sample-config.toml  script.py  unsubscribe.py  write_time.txt
scripts/: 100_answers.py  calc_latency.py  remove_users.py
src/: admin.rs  apikey.rs  args.rs  backend.rs  config.rs  email.rs  login.rs  main.rs  questions.rs  schema.sql
templates/: account.hbs  answers.hbs  answers.html.hbs  faq.hbs  footer.html.hbs  leclist.hbs  leclist.html.hbs  login.hbs  login.html.hbs  m2.html  questions.hbs  questions.html.hbs
templates/admin/: ind_answers.hbs  lec.hbs  lec.html.hbs  lecadd.hbs  lecedit.html.hbs  users.hbs  users.html.hbs
templates/apikey/: generate.hbs
