[package]
name = "websubmit"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.33.0"
rust-crypto = "0.2.36"
lettre = "0.9.2"
lettre_email = "0.9.2"
noria = { git = "https://github.com/mit-pdos/noria", tag = "v0.2.0" }
rocket = "0.4.2"
#slog = "2.4.0"
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
tokio = "0.1"
toml = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
openssl = "0.10"
openssl-sys = "0.9"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]
