[package]
name = "websubmit"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.33.0"
rust-crypto = "0.2.36"
lettre = "0.9.2"
lettre_email = "0.9.2"
noria = { path = "/Users/eleonorakiziv/rust/noria/noria/noria-server", package = "noria-server" }
rocket = "0.4.2"
slog = "2.4.0"
#slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
tokio = "0.1"
toml = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
openssl = "0.10"
openssl-sys = "0.9"
mime = "0.3.13"
rocket-multipart-form-data = "0.9.5"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]


[patch.'https://github.com/tower-rs/tokio-tower.git']
tokio-tower = { git = "https://github.com/ms705/tokio-tower.git", branch = "patched-for-old-noria" }
